  05 Feb 2013; Manuel Rueger (mrueg) gentoo@rueg.eu
  zsh-completions-0.8.0.ebuild:
  app-shells/zsh-completions: USE-Flag mismatch

*zsh-completions-0.8.0 (05 Feb 2013)

  05 Feb 2013; Manuel Rueger (mrueg) gentoo@rueg.eu
  +zsh-completions-0.8.0.ebuild, -zsh-completions-0.7.0.ebuild:
  app-shells/zsh-completions: Version bump

  08 Oct 2012; Manuel Rueger (mrueg) gentoo@rueg.eu
  zsh-completions-0.7.0.ebuild:
  app-shells/zsh-completions: Fix typo

  07 Oct 2012; Manuel Rueger (mrueg) gentoo@rueg.eu
  zsh-completions-0.7.0.ebuild:
  app-shells/zsh-completions: Drop useflag

  26 Sep 2012; Manuel Rueger (mrueg) gentoo@rueg.eu metadata.xml,
  zsh-completions-0.7.0.ebuild:
  app-shells/zsh-completions: Fix deps

*zsh-completions-0.7.0 (26 Sep 2012)

  26 Sep 2012; Manuel Rueger (mrueg) gentoo@rueg.eu +metadata.xml,
  +zsh-completions-0.7.0.ebuild:
  app-shells/zsh-completions: Initial version