@@ -1,4 +1,4 @@
 DIST zsh-completions-0.8.0.tar.gz 122733 SHA256 92bf4bd97c92bbc8d17ae9899a77cf5598db16c25c6adca1fa4f4529a28e4364 SHA512 7d9a3af8afbe6a1cc65a9dbc1034d9f946efbb381bfb0b86cee4c31b7efd5c55e3646dbf61423da77239484c2234bded65bb05d28bfd6241ef6734df4400b3d9 WHIRLPOOL a93f4d2728d6f066ad498e83e6d125711c8c7fb1ba9f7899eab734fbc810016e7a8da2134a2aa800d43ede01a540db1a153728ad8717f22dc8ea73a18c33dc48
-EBUILD zsh-completions-0.8.0.ebuild 1028 SHA256 bc2039b8c8d1963dc13041bec7fee91192c0544f47cd7edc0c8e12e5e7a4754b SHA512 881b77d2f97bcd71f1fba478a134a0866693c3b7243312c558d34d18ebd4c86309d6bf1c1c7c5b1944036754ed332675635cd4c049ba003d3804e30cf6a8989f WHIRLPOOL d11f15dbd1a05e89fb892e689259f4eff982be80113d090190ab39cb8c163d57c321cbd46f0a50b1bd43de80821b682ebca51e63fa1f8828850d01dde073846c
-MISC ChangeLog 905 SHA256 2069c8f0a95fc6f6e915cf96feae841a38f5c16116ea469a446a954161c246ab SHA512 4e2175b60ed2d8a53da584bb0ce3bba0fa397d57370a25af8f58127cc0336b3beb18200f8f5ad37479c2380021a10f3c329773907b52f94d441536ba7c8cce4a WHIRLPOOL 982ee443de9352d3a6c10487e3ae3a7928aaa233c8e22b653cb2ab49ee511bf97b8af596b8aba93a049193a7b85c3cc9c129e33bcd09b59a3f79a6af67f144a0
+EBUILD zsh-completions-0.8.0.ebuild 1000 SHA256 1ee63ad80452a7fea025d9af0ea768d50990e37bb3bb7c5b80bf5db132e8bb00 SHA512 e0a65ebadba6752c8822d0e27f1f89dd829286d92e528466f180d71b6f4588a64c53e0e987099bd8ae72c99d40b138ee86644471030dab4cfcb85c94d81fdfc9 WHIRLPOOL ccea728626bf1bd4ed33cc44190ba68f2e08e408414159a54d2ce92e2841db4dc7d7f48cd8f61d1335b7efce4d49053812e0e0508a4a83d24a23c1ea74984fb9
+MISC ChangeLog 1033 SHA256 a89d523c1612c0d3662ebe57e984193796df58c5191f7867170202effe93bb9f SHA512 b5777436f5115d2a4e5b1773bec5c641df19323d79fc39d1de1998b7dfbd365cb3d348c17f8b048c7eb05e01f821576183e6fc647284c1f1137d55c5587c1fcc WHIRLPOOL 19349799b6e1e880fe1cba9916a3ba9e0a3f4bb65e1a46ee4ab96880c53fb161064b26766f4c691143633baff5888dd078687da85ef49772d8022182069c073c
 MISC metadata.xml 354 SHA256 6d55476e655a8191c0888ce36e42a6e8e256123ba9061df184ffab374208fe8b SHA512 601e945e36e89326d3f984ca1aaafb480b0107da5d38a0bbca9109d24efb46e8241d146d04504b0b763eb6b58ce29766c2c34b3782d5dabf0d82ddbb6ce710e9 WHIRLPOOL 845df63d267fc076831ec01906e75908fe93bece5de0c29b3271a18d723c32aee4772d7717403c74aafac5d4b071c569a98212a89aaf8a5805781df90e61ec24
