@@ -1,3 +1,6 @@
+  25 Mar 2013; Manuel Rüger <gentoo@rueg.eu> zsh-completions-0.8.0.ebuild:
+  app-shells/zsh-completions: Simplify src_install
+
   05 Feb 2013; Manuel Rueger (mrueg) gentoo@rueg.eu
   zsh-completions-0.8.0.ebuild:
   app-shells/zsh-completions: USE-Flag mismatch
